; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_esp.c_serial_out.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_esp.c_serial_out.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.esp_struct = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.esp_struct*, i32, i8)* @serial_out to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @serial_out(%struct.esp_struct* %0, i32 %1, i8 zeroext %2) #0 {
  %4 = alloca %struct.esp_struct*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8, align 1
  store %struct.esp_struct* %0, %struct.esp_struct** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8 %2, i8* %6, align 1
  %7 = load i8, i8* %6, align 1
  %8 = load %struct.esp_struct*, %struct.esp_struct** %4, align 8
  %9 = getelementptr inbounds %struct.esp_struct, %struct.esp_struct* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i32, i32* %5, align 4
  %12 = sext i32 %11 to i64
  %13 = add nsw i64 %10, %12
  %14 = call i32 @outb(i8 zeroext %7, i64 %13)
  ret void
}

declare dso_local i32 @outb(i8 zeroext, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
